Fix off centre index cards

--- a/src/components/IndexDate/indexDate.module.scss
+++ b/src/components/IndexDate/indexDate.module.scss
@@ -5,8 +5,8 @@
   display: none;
   flex-direction: column;
   justify-content: center;
-  padding-right: 20px;
-  min-width: 130px;
+  padding-right: 10px;
+  min-width: 140px;
 
   > div {
     border-bottom: $colour-font-main 1px solid;
